  * release numbers follow "Semantic Versioning" http://semver.org

------------------------------------------------------------------------------
??/??/?? tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
         hanatok, rmeli, aditya-kamath, tirkarthi, Henry Kobin

  * 2.0.0

Fixes
  * Fixed chainID being overwritten by segid during file write. (Issue #3144)
  * ValueError raised when empty atomgroup is given to DensityAnalysis
    without a user defined grid. UserWarning displayed when user defined
    grid is provided. (Issue #3055)
  * Fixed import of several `__all__` lists (PR #3013)
  * atommethods (_get_prev/next_residues_by_resid) returns empty residue group
    when given empty residue group (Issue #3089)
  * MOL2 files without bonds can now be read and written (Issue #3057)
  * Write `CONECT` record only once in multi-model PDB files (Issue #3018)
  * Add '.nc' as a recognised extension for the NCDFWriter (Issue #3030)
  * PDB parser now assigns empty records for partially missing/invalid elements
    instead of not assigning the elements attribute at all (Issue #2422)
  * PDB writer now uses elements attribute instead of guessing elements from
    atom name (Issue #2423)
  * Cleanup and parametrization of test_atomgroup.py (Issue #2995)
  * The methods provided by topology attributes now appear in the
    documentation (Issue #1845)
  * AtomGroup.center now works correctly for compounds + unwrapping
    (Issue #2984)
  * Avoid using deprecated array indexing in topology attributes
    (Issue #2990, PR #2991)
  * ParmedParser no longer guesses elements if they are not recognised, instead
    empty strings are assigned (Issue #2933)
  * Instead of using ATOM for both ATOM and HETATM, HETATM record type
    keyword is properly written out by PDB writer (Issue #1753, PR #2880).