@@ -154,7 +154,8 @@ Chronological list of authors
   - Karthikeyan Singaravelan
 2021
   - Aditya Kamath
-  
+  - Henry Kobin
+
 External code
 -------------
 
