@@ -1051,8 +1051,9 @@ class PDBWriter(base.WriterBase):
            Writing now only uses the contents of the elements attribute
            instead of guessing by default. If the elements are missing,
            empty records are written out (Issue #2423).
-           Atoms are now checked for a chainID instead of being overwritten
-           by the last letter of the SegmentID (Issue #3144).
+           chainID now comes from the AtomGroup if the attribute is present.
+           If no chainID is present then the chainID will default to the l
+           last letter of segid (Issue #3144).
 
         """
         atoms = self.obj.atoms
@@ -1082,18 +1083,15 @@ class PDBWriter(base.WriterBase):
         altlocs = get_attr('altLocs', ' ')
         resnames = get_attr('resnames', 'UNK')
         icodes = get_attr('icodes', ' ')
-        chainids = get_attr('chainIDs', ' ')
         segids = get_attr('segids', ' ')
+        chainids = getattr(atoms,'chainIDs', segids)
         resids = get_attr('resids', 1)
         occupancies = get_attr('occupancies', 1.0)
         tempfactors = get_attr('tempfactors', 0.0)
         atomnames = get_attr('names', 'X')
         elements = get_attr('elements', ' ')
         record_types = get_attr('record_types', 'ATOM')
-        chainids = (
-            [id[:4] if (chainids[index] != '') else segids[index][-1:]
-                for index, id in enumerate(chainids)]
-            )  # check for a chainID, if no chainID default to segid
+
 
         # If reindex == False, we use the atom ids for the serial. We do not
         # want to use a fallback here.
@@ -1120,9 +1118,7 @@ class PDBWriter(base.WriterBase):
             vals['occupancy'] = occupancies[i]
             vals['tempFactor'] = tempfactors[i]
             vals['segID'] = segids[i][:4]
-            vals['chainID'] = (
-                chainids[i][:4] if (chainids[i][:4] != ' ') else segids[i][-1:]
-                )  # check to see if there is a valid chainID else segID
+            vals['chainID'] = chainids[i][-1:]
             vals['element'] = elements[i][:2].upper()
 
             # record_type attribute, if exists, can be ATOM or HETATM
